# learn-python

./: .gitignore  pyproject.toml
mini_projects/bank_simulation/: accounts.py  bank_simulation.py  main.py
mini_projects/directory_analyzer/: directory_analysis.csv  main.py
mini_projects/image_analyzer/: analyze_image.py
mini_projects/image_extension_converter/: convert.py
practice/data_analysis/: numpy.ipynb
practice/programs/: smart_function_dispatcher.py
practice/programs/decorators/: logger.py
practice/simple_programs/: atm_stimulation.py  school_management.py
practice/simple_programs/decorators/: decorator_factory.py  timer.py
tutorial/core/: functional_programming.ipynb
tutorial/core/notebooks/: functional_programming.ipynb  generators.ipynb  higher_order_functions.ipynb  iterators.ipynb  string_methods.ipynb
tutorial/core/python_basics/: week07_functions.py
tutorial/numpy/: numpy_and_vectors.ipynb  numpy_basics.ipynb
