[project]
name = "basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "console-tools",
    "cowsay>=6.1",
    "cryptography>=46.0.3",
    "inflect>=7.5.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
console-tools = { path = "../libs/console_tools", editable = true }
